--- a/assets/css/desktop/standard.css
+++ b/assets/css/desktop/standard.css
@@ -36,8 +36,7 @@
 	src:url('../../fonts/inter-v13-latin-800.woff2') format('woff2');
 }
 
-/* jetbrains-mono-200 - latin */
-@font-face {
+@font-face{
   font-display: swap;
   font-family: 'JetBrains Mono';
   font-style: normal;
@@ -45,7 +44,7 @@
   src: url('../../fonts/jetbrains-mono-v18-latin-200.woff2') format('woff2');
 }
 
-@font-face {
+@font-face{
   font-display: swap;
   font-family: 'JetBrains Mono';
   font-style: italic;
@@ -53,7 +52,7 @@
   src: url('../../fonts/jetbrains-mono-v18-latin-200italic.woff2') format('woff2');
 }
 
-@font-face {
+@font-face{
   font-display: swap;
   font-family: 'JetBrains Mono';
   font-style: normal;
@@ -61,7 +60,7 @@
   src: url('../../fonts/jetbrains-mono-v18-latin-regular.woff2') format('woff2');
 }
 
-@font-face {
+@font-face{
   font-display: swap;
   font-family: 'JetBrains Mono';
   font-style: italic;
@@ -69,7 +68,7 @@
   src: url('../../fonts/jetbrains-mono-v18-latin-italic.woff2') format('woff2');
 }
 
-@font-face {
+@font-face{
   font-display: swap;
   font-family: 'JetBrains Mono';
   font-style: normal;
@@ -77,7 +76,7 @@
   src: url('../../fonts/jetbrains-mono-v18-latin-600.woff2') format('woff2');
 }
 
-@font-face {
+@font-face{
   font-display: swap;
   font-family: 'JetBrains Mono';
   font-style: italic;
@@ -85,7 +84,7 @@
   src: url('../../fonts/jetbrains-mono-v18-latin-600italic.woff2') format('woff2');
 }
 
-@font-face {
+@font-face{
   font-display: swap;
   font-family: 'JetBrains Mono';
   font-style: normal;
@@ -93,12 +92,36 @@
   src: url('../../fonts/jetbrains-mono-v18-latin-800.woff2') format('woff2');
 }
 
-@font-face {
+@font-face{
   font-display: swap;
   font-family: 'JetBrains Mono';
   font-style: italic;
   font-weight: 800;
   src: url('../../fonts/jetbrains-mono-v18-latin-800italic.woff2') format('woff2');
+}
+
+@font-face{
+  font-display: swap;
+  font-family: 'Material Symbols Outlined';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../../fonts/material-symbols-outlined-v138-latin-regular.woff2') format('woff2');
+}
+
+.mso{
+  font-family: 'Material Symbols Outlined';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -moz-font-feature-settings: 'liga';
+  -moz-osx-font-smoothing: grayscale;
 }
 
 *{
